--- a/index.html
+++ b/index.html
@@ -1,12 +1,132 @@
-<!DOCTYPE html>
-<html lang='ja'>
+<!doctype html>
+<html lang="ja">
 <head>
-  <meta charset='UTF-8'>
-  <title>オリガミWebサイト</title>
+<meta charset="UTF-8">
+<meta name = "viewport" content = "width = device-width, initial-scale=1, user-scalable=yes">
+<meta name="description" content="『 青春を、熱狂を、感動を、再び。』各々が信じる青春を追い求め、熱く自由な踊りを">
+<meta property="og:title" content="オリガミ"/>
+<meta property="og:site_name" content="オリガミ">
+<meta property="og:type" content="website">
+<meta property="og:locale" content="ja-JP">
+<meta property="og:image" content="asets/image/origamiロゴ.png">
+<meta property="og:description" content="『 青春を、熱狂を、感動を、再び。』各々が信じる青春を追い求め、熱く自由な踊りを"/>
+<meta name="twitter:card" content="summary" />
+<title>オリガミ</title>
+<link rel="stylesheet" href="asets/css/reset.css">
+<link rel="stylesheet" href="asets/css/common.css">
+<link rel="stylesheet" href="asets/css/top.css">
+<link rel="icon" href="asets/image/origamiロゴ.png" />
+<link rel="apple-touch-icon" sizes="180×180" href="asets/image/origamiロゴ.png">
 </head>
+
 <body>
-  <h1>このhtmlがTOPページになる</h1>
-  <a href="about.html">内部ページ遷移</a>
-  <a href="https://twitter.com/origami_yosakoi">外部ページ遷移（公式Twitter）</div>
+<div id="splash">
+  <div id="splash-logo">社会人よさこいチーム<br>
+    オリガミ</div>
+  <!--/splash--></div>
+<div class="splashbg1"></div>
+<div class="splashbg2"></div>
+<!---画面遷移用-->
+<div id="body-container">
+  <header class="header">
+    <div class="header-content-wrapper"> <a href="index.html"> <img src="asets/image/origamiロゴ.png" alt="オリガミロゴ"></a>
+      <h1>社会人よさこいチーム　オリガミ</h1>
+      <div class="openbtn"><span></span><span></span><span></span></div>
+      <nav id="g-nav"> 　　
+        <div id="g-nav-list"><!--ナビの数が増えた場合縦スクロールするためのdiv※不要なら削除-->
+          <ul>
+            <li><a href="index.html">ホーム</a></li>
+            <li><a href="about.html">オリガミとは</a></li>
+            <li><a href="enbu.html">演舞紹介</a></li>
+            <li><a href="member.html">メンバー紹介</a></li>
+          </ul>
+        </div>
+      </nav>
+    </div>
+  </header>
+  <div id="container">
+    <main class="main">
+      <section id="top" class="section-top">
+        <div class="section-top__image">
+          <div class="section-top__image-filter">
+            <div class="section-top__image-message">
+              <h2 class="blurTrigger">『 青春を、熱狂を、<br class="br-pc">
+                感動を、再び。』</h2>
+              <p class="blurTrigger">各々が信じる青春を追い求め、<br class="br-pc">
+                熱く自由な踊りを</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <div id="main-container">
+        <section class="section-schedule">
+          <div><span class="blurTrigger"><img src="asets/image/区切り.png" width="62px" height="50px" alt="区切り"></span>
+            <h2><span class="blurTrigger">活動予定</span></h2>
+            <p><span class="blurTrigger">日付　参加予定お祭り</span></p>
+          </div>
+        </section>
+        <section class="section-information">
+          <div><span class="blurTrigger"><img src="asets/image/区切り.png" width="62px" height="50px" alt="区切り"></span>
+            <h2><span class="blurTrigger">最新情報</span></h2>
+            <div class="section-information__twitter"> <a class="twitter-timeline" data-lang="ja" data-width="450" data-height="590" data-theme="light" href="https://twitter.com/origami_yosakoi?ref_src=twsrc%5Etfw">Tweets by origami_yosakoi</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script> 
+            </div>
+          </div>
+        </section>
+        <section class="section-enbu"> <span class="blurTrigger"><img src="asets/image/区切り.png" width="62px" height="50px" alt="区切り"></span>
+          <h2><span class="blurTrigger">演舞一覧</span></h2>
+          <ul class="flex delayScroll">
+            <ol class="box">
+              <div class="enbu_2"> <img src="asets/image/enbu_2.jpg" alt="メメント">
+                <p>第二作</p>
+                <h3>メメント</h3>
+              </div>
+            </ol>
+            <ol class="box">
+              <div class="enbu_1"> <img src="asets/image/enbu_1.jpg" alt="東雲">
+                <p>第一作</p>
+                <h3>東雲</h3>
+              </div>
+            </ol>
+          </ul>
+          <div class="enbu-btn"> <a href="enbu.html">演舞紹介　→</a> </div>
+        </section>
+        <section class="section-about flex delayScroll"> <img class="box" src="asets/image/top-about.jpg" alt="オリガミとは">
+          <div class="btn-wrapper box">
+            <div class="btn-s"></div>
+            <div class="btn"> <a href="about.html" class="btn">オリガミとは　→</a></div>
+          </div>
+        </section>
+        <section class="section-member flex delayScroll"> <img class="box" src="asets/image/top-member.jpg" alt="メンバー紹介">
+          <div class="btn-wrapper_member box">
+            <div class="btn-s_member"></div>
+            <div class="btn btn-member" > <a href="member.html" class="btn">メンバー紹介　→</a></div>
+          </div>
+        </section>
+      </div>
+    </main>
+  </div>
+  <footer class="footer">
+    <div class="footer-content-wrapper">
+      <div class="footer-sns_links">
+        <ul>
+          <li><a href="https://twitter.com/origami_yosakoi"></a><img src="asets/image/icon-twitter.png" alt="twitter icon"></li>
+          <li><a href="https://www.instagram.com/origami_yosakoi/"></a><img src="asets/image/icon-instagram.png" alt="instagram icon"></li>
+          <li><a href="https://www.youtube.com/@origami_yosakoi"></a><img src="asets/image/icon-youtube.png" alt="youtube icon"></li>
+        </ul>
+      </div>
+      <nav class="footer-sitemap">
+        <ul>
+          <li><a href="index.html">ホーム</a></li>
+          <li><a href="about.html">オリガミとは</a></li>
+          <li><a href="enbu.html">演舞紹介</a></li>
+          <li><a href="member.html">メンバー紹介</a></li>
+        </ul>
+      </nav>
+      <small class="footer__copyright">Copyright ©️ origami_yosakoi </small> </div>
+  </footer>
+</div>
+<script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
+<script src="asets/js/common.js"></script> 
+<script src="asets/js/top.js"></script>
 </body>
 </html>
