jsのリンク修正

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
   </footer>
 </div>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
-<script src="js/common.js"></script> 
-<script src="js/top.js"></script>
+<script src="javascript/common.js"></script> 
+<script src="javascript/top.js"></script>
 </body>
 </html>
