--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@
     <main class="main">
       <section id="top" class="section-top">
         <div class="section-top__image"> </div>
+        <div class="scrolldown1"><span>Scroll</span></div>
       </section>
       <div id="main-container">
       <section class="section-about">
