--- a/enbu.html
+++ b/enbu.html
@@ -49,6 +49,7 @@
     <main class="main">
       <section id="top" class="section-top">
         <div class="section-top__image"> </div>
+        <div class="scrolldown1"><span>Scroll</span></div>
       </section>
       <div id="main-container">
         <section class="section-enbu"> <span class="blurTrigger"><img src="asets/image/区切り.png" width="62px" height="50px" alt="区切り"></span>
@@ -60,12 +61,15 @@
               <img src="asets/image/enbu_2.jpg" alt="メメント">
               <div class="enbu-part">
                 <p><span class="blurTrigger">演舞テーマは<br>『メメント・モリ』<br>
+                  <br>
                   ラテン語で『死を想え』という意味になります。<br>
+                  <br>
                   西洋をモチーフとした演舞となっており、<br>
                   「日々をただ消化するように生きるな、<br>
                   明日もわからぬ命なのだから」<br>
                   というメッセージを伝えることを<br class="br-mobile">
                   目標としています。<br>
+                  <br>
                   死との向き合い方に悩みもがきながらも、<br>
                   儚き命を燃やそうとする踊り子の生き様を<br>
                   楽しんでいただけたら幸いです。</span></p>
@@ -79,11 +83,13 @@
               <div class="enbu-part">
                 <p><span class="blurTrigger">演舞テーマは<br>
                   『常識を押し付ける社会に対して反旗を翻す』<br>
-                  幕末志士をモチーフとして、<br class="br-mobile">
-                  社会全体で形成されている、<br>
+                  <br>
+                  幕末志士をモチーフとして、<br>
+                  社会全体で形成されている<br>
                   常識や当たり前に信念を持って抗うことで、<br>
                   抑圧された感情を解き放つことを<br>
                   目指した演舞となっています。<br>
+                  <br>
                   曲も踊りもどんどん盛り上がって<br>
                   激しくなっていく様を通して、<br>
                   見てくださるお客様に少しでも<br>
