--- a/member.html
+++ b/member.html
@@ -50,6 +50,7 @@
     <main class="main">
       <section id="top" class="section-top">
         <div class="section-top__image"> </div>
+        <div class="scrolldown1"><span>Scroll</span></div>
       </section>
       <div id="main-container">
         <section class="section-member"> <span class="blurTrigger"><img src="asets/image/区切り.png" width="62px" height="50px" alt="区切り"></span>
@@ -58,37 +59,123 @@
              メンバーカラーは衣装に反映されていますので、<br>
             "推し"の踊り子を見つけるつもりで<br>演舞を観て楽しんでいただけたら幸いです。</span></p>
           <div class="section-member_people">
-            <div class="frame frame-1"> <img src="asets/image/LINE_ALBUM_230702_0_2.jpg" alt="点P">
-              <p>名前<br>
-                メンバーカラー</p>
+            <div class="frame frame-1"> <img src="asets/image/点P.jpg" alt="点P"><p>点P<br>インディゴ</p>
             </div>
-            <div class="frame frame-2"> <img src="asets/image/LINE_ALBUM_230702_25.jpg" alt="点P">
-              <p>名前<br>
-                メンバーカラー</p>
+            <div class="frame frame-2"> <img src="asets/image/リトルミギー.jpg" alt="リトルミギー"><p>リトルミギー<br>イエロー</p>
             </div>
-            <div class="frame frame-3"> <img src="asets/image/LINE_ALBUM_230702_2_2.jpg" alt="点P">
-              <p>名前<br>
-                メンバーカラー</p>
+            <div class="frame frame-3"> <img src="asets/image/中々.jpg" alt="中々">
+              <p>中々<br>
+                アイボリー</p>
             </div>
-            <div class="frame frame-4"> <img src="asets/image/LINE_ALBUM_230702_17.jpg" alt="点P">
-              <p>名前<br>
-                メンバーカラー</p>
+            <div class="frame frame-4"> <img src="asets/image/そばにいさせて.jpg" alt="そばにいさせて">
+              <p>そばにいさせて<br>
+                ミントグリーン</p>
             </div>
-            <div class="frame frame-5"> <img src="asets/image/garally-p_6.jpg" alt="点P">
-              <p>名前<br>
-                メンバーカラー</p>
+            <div class="frame frame-5"> <img src="asets/image/LINE_ALBUM_230702_18.jpg" alt="わがはい">
+              <p>わがはい<br>
+                パープル</p>
             </div>
-            <div class="frame frame-6"> <img src="asets/image/LINE_ALBUM_20221011_230702_29.jpg" alt="点P">
-              <p>名前<br>
-                メンバーカラー</p>
+            <div class="frame frame-6"> <img src="asets/image/people.jpg" alt="ほっしゃん">
+              <p>ほっしゃん<br>
+                ホットピンク</p>
             </div>
-            <div class="frame frame-7"> <img src="asets/image/garally-p_7.jpg" alt="点P">
-              <p>名前<br>
-                メンバーカラー</p>
+            <div class="frame frame-7"> <img src="asets/image/people.jpg" alt="にゃんまんじろう">
+              <p>にゃんまんじろう<br>
+                サックス</p>
             </div>
-            <div class="frame frame-8"> <img src="asets/image/LINE_ALBUM_230702_23_0.jpg" alt="点P">
-              <p>名前<br>
-                メンバーカラー</p>
+            <div class="frame frame-8"> <img src="asets/image/ちょっぴりウェルダン.jpg" alt="ちょっぴりウェルダン">
+              <p>ちょっぴりウェルダン<br>
+                フォレスト</p>
+            </div>
+            <div class="frame frame-9"> <img src="asets/image/people.jpg" alt="波っ">
+              <p>波っ<br>
+                コーラルオレンジ</p>
+            </div>
+            <div class="frame frame-10"> <img src="asets/image/people.jpg" alt="弟">
+              <p>弟<br>
+                バーガンディ</p>
+            </div>
+            <div class="frame frame-11"> <img src="asets/image/森のくまさん.jpg" alt="森のくまさん">
+              <p>森のくまさん<br>
+                ガーネットレッド</p>
+            </div>
+            <div class="frame frame-12"> <img src="asets/image/people.jpg" alt="主人公">
+              <p>主人公<br>
+                アイビーグリーン</p>
+            </div>
+            <div class="frame frame-13"> <img src="asets/image/people.jpg" alt="うんちょこちょこちょこぴー">
+              <p>うんちょこちょこちょこぴー<br>
+                デニム</p>
+            </div>
+            <div class="frame frame-14"> <img src="asets/image/people.jpg" alt="戸山公園">
+              <p>戸山公園<br>
+                メトロブルー</p>
+            </div>
+            <div class="frame frame-15"> <img src="asets/image/people.jpg" alt="元カレ">
+              <p>元カレ<br>
+                ネイビー</p>
+            </div>
+            <div class="frame frame-16"> <img src="asets/image/people.jpg" alt="大々">
+              <p>大々<br>
+                オレンジ</p>
+            </div>
+            <div class="frame frame-17"> <img src="asets/image/people.jpg" alt="中目黒">
+              <p>中目黒<br>
+                アーミーグリーン</p>
+            </div>
+            <div class="frame frame-18"> <img src="asets/image/people.jpg" alt="カマキリ星人">
+              <p>カマキリ星人<br>
+                ライトグリーン</p>
+            </div>
+            <div class="frame frame-19"> <img src="asets/image/people.jpg" alt="ウォレス">
+              <p>ウォレス<br>
+                ミント</p>
+            </div>
+            <div class="frame frame-20"> <img src="asets/image/people.jpg" alt="シリキウトゥンドゥ">
+              <p>シリキウトゥンドゥ<br>
+                ターコイズ</p>
+            </div>
+            <div class="frame frame-21"> <img src="asets/image/people.jpg" alt="ふぁそら">
+              <p>ふぁそら<br>
+                レッド</p>
+            </div>
+            <div class="frame frame-22"> <img src="asets/image/people.jpg" alt="邪王炎殺黒龍波">
+              <p>邪王炎殺黒龍波<br>
+                ブラック</p>
+            </div>
+            <div class="frame frame-23"> <img src="asets/image/people.jpg" alt="JJ">
+              <p>JJ<br>
+                ラベンダー</p>
+            </div>
+            <div class="frame frame-24"> <img src="asets/image/水曜どうでしょう.jpg" alt="水曜どうでしょう">
+              <p>水曜どうでしょう<br>
+                アクア</p>
+            </div><div class="frame frame-25"> <img src="asets/image/people.jpg" alt="じゃがビー">
+              <p>じゃがビー<br>
+                ライトパープル</p>
+            </div>
+            <div class="frame frame-26"> <img src="asets/image/知人B.jpg" alt="知人B">
+              <p>知人B<br>
+                ロイヤルブルー</p>
+            </div><div class="frame frame-27"> <img src="asets/image/筑前煮.jpg" alt="筑前煮">
+              <p>筑前煮<br>
+                ミディアムブルー</p>
+            </div>
+            <div class="frame frame-28"> <img src="asets/image/people.jpg" alt="城之内">
+              <p>城之内<br>
+                ゴールドイエロー</p>
+            </div>
+            <div class="frame frame-29"> <img src="asets/image/つらみ。.jpg" alt="つらみ。">
+              <p>つらみ。<br>
+                ジャパンブルー</p>
+            </div>
+            <div class="frame frame-30"> <img src="asets/image/people.jpg" alt="ビッグヒダリー">
+              <p>ビッグヒダリー<br>
+                チャコール</p>
+            </div>
+            <div class="frame frame-31"> <img src="asets/image/オダギリジョー.jpg" alt="オダギリジョー">
+              <p>オダギリジョー<br>
+                イタリアンレッド</p>
             </div>
           </div>
         </section>
