--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <main class="main">
       <section id="top" class="section-top">
         <div class="section-top__image">
+          <div class="scrolldown1"><span>Scroll</span></div>
           <div class="section-top__image-filter">
             <div class="section-top__image-message">
               <h2 class="blurTrigger">『 青春を、熱狂を、<br class="br-pc">
@@ -109,9 +110,10 @@
     <div class="footer-content-wrapper">
       <div class="footer-sns_links">
         <ul>
-          <li><a href="https://twitter.com/origami_yosakoi"></a><img src="asets/image/icon-twitter.png" alt="twitter icon"></li>
-          <li><a href="https://www.instagram.com/origami_yosakoi/"></a><img src="asets/image/icon-instagram.png" alt="instagram icon"></li>
-          <li><a href="https://www.youtube.com/@origami_yosakoi"></a><img src="asets/image/icon-youtube.png" alt="youtube icon"></li>
+          <li><a href="https://twitter.com/origami_yosakoi" target="_blank" rel="noopener noreferrer"><img src="asets/image/icon-x.png" alt="X icon"></a></li>
+          <li><a href="https://www.instagram.com/origami_yosakoi/" target="_blank" rel="noopener noreferrer"><img src="asets/image/icon-instagram.png" alt="instagram icon"></a></li>
+          <li><a href="https://www.youtube.com/@origami_yosakoi"
+            target="_blank" rel="noopener noreferrer"><img src="asets/image/icon-youtube.png" alt="youtube icon"></a></li>
         </ul>
       </div>
       <nav class="footer-sitemap">
@@ -128,6 +130,5 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script> 
 <script src="asets/js/common.js"></script> 
 <script src="asets/js/top.js"></script>
->>>>>>> 56e3855eea1911ee1e6212686d5c27e46ffa2909
 </body>
 </html>
