莉穂菜の編集作業

--- a/enbu.html
+++ b/enbu.html
@@ -106,9 +106,10 @@
     <div class="footer-content-wrapper">
       <div class="footer-sns_links">
         <ul>
-          <li><a href="https://twitter.com/origami_yosakoi"></a><img src="asets/image/icon-twitter.png" alt="twitter icon"></li>
-          <li><a href="https://www.instagram.com/origami_yosakoi/"></a><img src="asets/image/icon-instagram.png" alt="instagram icon"></li>
-          <li><a href="https://www.youtube.com/@origami_yosakoi"></a><img src="asets/image/icon-youtube.png" alt="youtube icon"></li>
+          <li><a href="https://twitter.com/origami_yosakoi" target="_blank" rel="noopener noreferrer"><img src="asets/image/icon-x.png" alt="X icon"></a></li>
+          <li><a href="https://www.instagram.com/origami_yosakoi/" target="_blank" rel="noopener noreferrer"><img src="asets/image/icon-instagram.png" alt="instagram icon"></a></li>
+          <li><a href="https://www.youtube.com/@origami_yosakoi"
+            target="_blank" rel="noopener noreferrer"><img src="asets/image/icon-youtube.png" alt="youtube icon"></a></li>
         </ul>
       </div>
       <nav class="footer-sitemap">
